# pythonic-template

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Python.code-profile  README.md  cookiecutter-ci.yaml  cookiecutter.json  main.py  mkdocs.yml  pyproject.toml  repository_20250817142555.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/compute-python/: action.yml
.github/workflows/: build.yml  ci.yml  publish.yml  template-validation.yml  template-validation.yml.backup
docs/: changelog.md  index.md  troubleshooting.md
docs/development/: contributing.md  release-process.md  testing.md
docs/features/: devops.md  documentation.md  modern-stack.md  quality-assurance.md
docs/getting-started/: configuration.md  generated-project.md  quick-start.md
docs/reference/: best-practices.md  project-structure.md  template-variables.md
hooks/: post_gen_project.py
scripts/: bump_python.py  validate_template.py
scripts/lib/: python_versions.py
tests/: test_cruft_tracking.py  test_template.py
{{cookiecutter.repo_name}}/: .codespellignore  .cruft.json  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  test-template.txt  {%- if cookiecutter.ai_agents == 'all' or cookiecutter.ai_agents == 'openai_codex' or 'openai_codex' in cookiecutter.ai_agents -%}AGENTS.md{%- endif -%}
{{cookiecutter.repo_name}}/.devcontainer/: Dockerfile  devcontainer.json  devcontainer.json.tmpl  docker-compose.yml
{{cookiecutter.repo_name}}/.github/: dependabot.yml  release.yml
{{cookiecutter.repo_name}}/.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
{{cookiecutter.repo_name}}/.github/actions/compute-python/: action.yml
{{cookiecutter.repo_name}}/.github/workflows/: build.yml  ci.yml  docker.yml  docs-gh-pages.yml  docs.yml  publish.yml  {{ 'render-paper.yml' if cookiecutter.project_type == 'paper' else '__remove__render-paper.yml' }}
{{cookiecutter.repo_name}}/docs/: index.md
{{cookiecutter.repo_name}}/docs/development/: changelog.md  contributing.md  template-sync.md
{{cookiecutter.repo_name}}/scripts/: bump_python.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.package_name}}/: __init__.py
{{cookiecutter.repo_name}}/tests/: conftest.py  test_sample.py
{{cookiecutter.repo_name}}/{%- if cookiecutter.project_type == 'paper' -%}paper{%- endif -%}/: {%- if cookiecutter.project_type == 'paper' -%}paper.qmd{%- endif -%}
{{cookiecutter.repo_name}}/{{ '.roo' if cookiecutter.ai_agents == 'all' or cookiecutter.ai_agents == 'roo_code' or 'roo_code' in cookiecutter.ai_agents else '__remove__roo' }}/rules-code/: rules.md
{{cookiecutter.repo_name}}/{{ cookiecutter.project_type == 'paper' and 'paper' or '__remove__paper' }}/: paper.qmd  references.bib
